src/objects/SampleTest__c.object
<CustomObject>
    <fields>
        <fullName>Sample_Field2__c</fullName>
        <label>Sample Field2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_field1__c</fullName>
        <label>Sample field1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SampleTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Sample nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SampleTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>